fix video wrapper height to align with content box to the right

--- a/wp-content/themes/music-heals/sass/_mixins.scss
+++ b/wp-content/themes/music-heals/sass/_mixins.scss
@@ -160,6 +160,7 @@
 		display: flex;
 		flex-direction: column;
 		margin: 0rem 1rem 0rem 0rem;
-		height: 55vh;
+		height: 57vh;
+		width: 29%;
 	}
 }
